--- a/Petini_Capston_Mini/src/app/guest/guest.component.html
+++ b/Petini_Capston_Mini/src/app/guest/guest.component.html
@@ -97,7 +97,7 @@
             </div>
           </div>
         </nav>
-        <router-outlet (activate)="onActivate($event)" (updateDataEvent)="updateData($event)"></router-outlet>
+        <router-outlet (activate)="onActivate($event)" ></router-outlet>
         <!-- footer -->
         <!-- Footer -->
         <footer class="text-center text-lg-start bg-3 bg-light  text-white">
