--- a/Petini_Capston_Mini/src/app/home/home.component.html
+++ b/Petini_Capston_Mini/src/app/home/home.component.html
@@ -103,51 +103,14 @@
       <div class="content-items container">
         <div class="row">
           <!-- items -->
-          <a routerLink="/Shop/Items" title="Đồ Ăn Chó Cho Chó Con SmartHeart Power Pack 1kg"
+          <a *ngFor="let item of valueProduct" routerLink="/Shop/Items" [title]="item.name" (click)="onItemSelector(item.name)"
             class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
             <div class="card p-2 ">
-              <img src="/assets/images/item-1.jpg" alt="Đồ Ăn Chó Cho Chó Con SmartHeart Power Pack 1kg"
+              <img [src]="item.imageUrl"
                 class="card-img-top item-img">
-              <h5 class="card-title text-center fw-bold text-body text-capitalize item-text ">Đồ Ăn Chó Cho Chó Con
-                SmartHeart Power Pack 1kg
+              <h5 class="card-title text-center fw-bold text-body text-capitalize item-text "> {{item.name}}
               </h5>
-              <h6 class="card-text text-center ">100.000</h6>
-            </div>
-          </a>
-          <!-- items -->
-          <a routerLink="/Shop/Items" title="Thức Ăn Cho Mèo Royal Canin Mother & Babycat 400gr"
-            class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-            <div class="card p-2 ">
-              <img src="/assets/images/item-2.jpg" alt="Thức Ăn Cho Mèo Royal Canin Mother & Babycat 400gr"
-                class="card-img-top item-img">
-              <h5 class="card-title text-center fw-bold text-body text-capitalize item-text ">thức ăn cho mèo royal
-                canin mother & babycat 400gr
-              </h5>
-              <h6 class="card-text text-center ">110.000</h6>
-            </div>
-          </a>
-          <!-- items -->
-          <a routerLink="/Shop/Items" title="Thức ăn cho chó ROYAL CANIN Medium Adult 1KG"
-            class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-            <div class="card p-2 ">
-              <img src="/assets/images/item-3.jpg" alt="Thức ăn cho chó ROYAL CANIN Medium Adult 1KG"
-                class="card-img-top item-img">
-              <h5 class="card-title text-center fw-bold text-body text-capitalize item-text ">Thức ăn cho chó ROYAL
-                CANIN Medium Adult 1KG
-              </h5>
-              <h6 class="card-text text-center ">155.000</h6>
-            </div>
-          </a>
-          <!-- items -->
-          <a routerLink="/Shop/Items" title="Thức Ăn Cho Mèo SEAFOOD Adult 1.2kg"
-            class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-            <div class="card p-2 ">
-              <img src="/assets/images/item-4.png" alt="Thức Ăn Cho Mèo SEAFOOD Adult 1.2kg"
-                class="card-img-top item-img">
-              <h5 class="card-title text-center fw-bold text-body text-capitalize item-text">Thức Ăn Cho Mèo SEAFOOD
-                Adult 1.2kg
-              </h5>
-              <h6 class="card-text text-center ">130.000</h6>
+              <h6 class="card-text text-center ">{{item.price | currency: 'VND'}} </h6>
             </div>
           </a>
 
@@ -180,45 +143,17 @@
       <div class="content-items container">
         <div class="row">
           <!-- items -->
-          <a href="#" title="Tắm rửa thú cưng" class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
+          <a *ngFor="let item of valueService" routerLink="/Service/ServiceDetail" [title]="item.name" (click)="onServiceSelector(item.name)"
+            class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
             <div class="card p-2 ">
-              <img src="/assets/images/service-1.jpg" alt="Tắm rửa thú cưng" class="card-img-top item-img">
-              <h6
-                class="card-text text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                Tắm rửa thú cưng</h6>
-
+              <img [src]="item.imageUrl"
+                class="card-img-top item-img">
+              <h5 class="card-title text-center fw-bold text-body text-capitalize item-text "> {{item.name}}
+              </h5>
+              <h6 class="card-text text-center ">{{item.price | currency: 'VND'}} </h6>
             </div>
           </a>
-          <!-- items -->
-          <a href="#" title="Tắm rửa thú cưng" class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-            <div class="card p-2 ">
-              <img src="/assets/images/service-4.jpeg" alt="Tắm rửa thú cưng" class="card-img-top item-img">
-              <h6
-                class="card-text text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                Cắt tỉa lông thú cưng</h6>
 
-            </div>
-          </a>
-          <!-- items -->
-          <a href="#" title="Tắm rửa thú cưng" class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-            <div class="card p-2 ">
-              <img src="/assets/images/service-3.jpg" alt="Tắm rửa thú cưng" class="card-img-top item-img">
-              <h6
-                class="card-text text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                Vệ sinh tai thú cưng</h6>
-
-            </div>
-          </a>
-          <!-- items -->
-          <a href="#" title="Tắm rửa thú cưng" class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-            <div class="card p-2 ">
-              <img src="/assets/images/service-2.png" alt="Tắm rửa thú cưng" class="card-img-top item-img">
-              <h6
-                class="card-text text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                Cắt móng, răng thú cưng </h6>
-
-            </div>
-          </a>
 
 
         </div>
@@ -249,57 +184,17 @@
       <div class="content-items container">
         <div class="row">
           <!-- items -->
-          <a href="#" title="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-            class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-            <div class="card p-2 ">
-              <img src="/assets/images/pet-1.jpg" alt="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-                class="card-img-top item-img">
-              <h5
-                class="card-title text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                Mèo Anh Lông Ngắn
-              </h5>
-              <h6 class="card-text text-center ">Liên hệ</h6>
-            </div>
-          </a>
-          <!-- items -->
-          <a href="#" title="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-            class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-            <div class="card p-2 ">
-              <img src="/assets/images/pet-2.jpg" alt="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-                class="card-img-top item-img">
-              <h5
-                class="card-title text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                chó poodle nâu
-              </h5>
-              <h6 class="card-text text-center ">Liên hệ</h6>
-            </div>
-          </a>
-          <!-- items -->
-          <a href="#" title="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-            class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-            <div class="card p-2 ">
-              <img src="/assets/images/pet-3.jpg" alt="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-                class="card-img-top item-img">
-              <h5
-                class="card-title text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                chó alaska
-              </h5>
-              <h6 class="card-text text-center ">Liên hệ</h6>
-            </div>
-          </a>
-          <!-- items -->
-          <a href="#" title="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-            class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-            <div class="card p-2 ">
-              <img src="/assets/images/pet-4.jpg" alt="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-                class="card-img-top item-img">
-              <h5
-                class="card-title text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                Mèo ba tư lông ngắn
-              </h5>
-              <h6 class="card-text text-center ">Liên hệ</h6>
-            </div>
-          </a>
+          <a *ngFor="let item of valuePet" routerLink="/Pet/PetDetail" [title]="item.name" (click)="onPetSelector(item.name)"
+          class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
+          <div class="card p-2 ">
+            <img [src]="item.imageUrl"
+              class="card-img-top item-img">
+            <h5 class="card-title text-center fw-bold text-body text-capitalize item-text "> {{item.name}}
+            </h5>
+            <h6 class="card-text text-center ">Liên hệ </h6>
+          </div>
+        </a>
+
 
 
         </div>
