--- a/Petini_Capston_Mini/src/app/profile/profile.component.html
+++ b/Petini_Capston_Mini/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
   <div class="row w-100">
     <div class="col-xl-3 col-lg-4">
       <div class="card">
-        <img class="card-img-top img-fluid" [src]="avatarUrl">
+        <img class="card-img-top img-fluid" src="/assets/images/default.png">
         <div class="card-body text-center">
           <h5 class=" card-title m-0">{{username}} </h5>
 
