--- a/Petini_Capston_Mini/src/app/shop-owner/manage-account/manage-account.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-account/manage-account.component.html
@@ -18,9 +18,9 @@
                 <tr class="fw-5">
                   <th class="w-2">ID</th>
                   <th>Tên</th>
-                  <th class="w-1">Số điện thoại</th>
-                  <th class="w-1">Trạng thái</th>
-                  <th class="w-1">Xem </th>
+                  <th class="w-">Số điện thoại</th>
+                  <th class="w-">Trạng thái</th>
+                  <th class="w-">Xem </th>
                 </tr>
               </thead>
               <tbody>
@@ -91,9 +91,9 @@
                 <tr class="fw-5">
                   <th class="w-2">ID</th>
                   <th>Tên</th>
-                  <th class="w-1">Số điện thoại</th>
-                  <th class="w-1">Trạng thái</th>
-                  <th class="w-1">Xem và Sửa</th>
+                  <th class="w-">Số điện thoại</th>
+                  <th class="w-">Trạng thái</th>
+                  <th class="w-">Xem và Sửa</th>
                 </tr>
               </thead>
               <tbody style="height:30vh">
