--- a/Petini_Capston_Mini/src/app/shop-owner/manage-booking/manage-booking.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-booking/manage-booking.component.html
@@ -17,11 +17,11 @@
                 <tr class="fw-5">
                   <th class="w-2">ID</th>
                   <th>Tên</th>
-                  <th class="w-1">Dịch vụ</th>
-                  <th class="w-1">ngày và giờ đặt</th>
-                  <th class="w-1">Trạng thái</th>
-                  <th class="w-1">Tổng tiền</th>
-                  <th class="w-1">Xem và Sửa</th>
+                  <th class="w-">Dịch vụ</th>
+                  <th class="w-">ngày và giờ đặt</th>
+                  <th class="w-">Trạng thái</th>
+                  <th class="w-">Tổng tiền</th>
+                  <!-- <th class="w-">Xem và Sửa</th> -->
                 </tr>
               </thead>
               <tbody>
@@ -53,15 +53,15 @@
                   <td>
                     {{post.bookingAfterCare[0].petiniAfterCare.price}}
                   </td>
-                  <td class="text-center">
+                  <!-- <td class="text-center">
                     <button mat-icon-button color="accent"> <mat-icon>edit</mat-icon></button>
-                  </td>
+                  </td> -->
                 </tr>
                 <tr *ngIf="valuesAll.length < 1">
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -70,7 +70,7 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -78,7 +78,7 @@
                 <tr *ngIf="valuesAll.length < 3">
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -87,7 +87,7 @@
                 <tr *ngIf="valuesAll.length < 4">
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -95,7 +95,7 @@
                 </tr>
                 <tr *ngIf="valuesAll.length < 5">
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -115,11 +115,11 @@
                 <tr class="fw-5">
                   <th class="w-2">ID</th>
                   <th>Tên</th>
-                  <th class="w-1">Dịch vụ</th>
-                  <th class="w-1">ngày và giờ đặt</th>
-                  <th class="w-1">Trạng thái</th>
-                  <th class="w-1">Tổng tiền</th>
-                  <th class="w-1">Xem và Sửa</th>
+                  <th class="">Dịch vụ</th>
+                  <th class="">ngày và giờ đặt</th>
+                  <th class="">Trạng thái</th>
+                  <th class="">Tổng tiền</th>
+                  <!-- <th class="">Xem và Sửa</th> -->
                 </tr>
               </thead>
               <tbody>
@@ -151,15 +151,15 @@
                   <td>
                     {{post.bookingAfterCare[0].petiniAfterCare.price}}
                   </td>
-                  <td class="text-center">
+                  <!-- <td class="text-center">
                     <button mat-icon-button color="accent"> <mat-icon>edit</mat-icon></button>
-                  </td>
+                  </td> -->
                 </tr>
 
                 <tr *ngIf="valuesPending.length < 1">
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -167,7 +167,7 @@
                 </tr>
                 <tr *ngIf="valuesPending.length < 2">
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -178,14 +178,14 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
                 </tr>
                 <tr *ngIf="valuesPending.length < 4">
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -193,7 +193,7 @@
                   <td></td>
                 </tr>
                 <tr *ngIf="valuesPending.length < 5">
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -214,11 +214,11 @@
                 <tr class="fw-5">
                   <th class="w-2">ID</th>
                   <th>Tên</th>
-                  <th class="w-1">Dịch vụ</th>
-                  <th class="w-1">ngày và giờ đặt</th>
-                  <th class="w-1">Trạng thái</th>
-                  <th class="w-1">Tổng tiền</th>
-                  <th class="w-1">Xem và Sửa</th>
+                  <th class="">Dịch vụ</th>
+                  <th class="">ngày và giờ đặt</th>
+                  <th class="">Trạng thái</th>
+                  <th class="">Tổng tiền</th>
+                  <!-- <th class="">Xem và Sửa</th> -->
                 </tr>
               </thead>
               <tbody>
@@ -250,9 +250,9 @@
                   <td>
                     {{post.bookingAfterCare[0].petiniAfterCare.price}}
                   </td>
-                  <td class="text-center">
+                  <!-- <td class="text-center">
                     <button mat-icon-button color="accent"> <mat-icon>edit</mat-icon></button>
-                  </td>
+                  </td> -->
                 </tr>
 
 
@@ -261,7 +261,7 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                 </tr>
@@ -269,7 +269,7 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -277,7 +277,7 @@
                 <tr *ngIf="valuesFinished.length < 3">
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -286,7 +286,7 @@
                 <tr *ngIf="valuesFinished.length < 4">
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
@@ -295,7 +295,7 @@
                 <tr *ngIf="valuesFinished.length < 5">
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <!-- <td></td> -->
                   <td></td>
                   <td></td>
                   <td></td>
