--- a/Petini_Capston_Mini/src/app/shop-owner/manage-account/account-detail/account-detail.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-account/account-detail/account-detail.component.html
@@ -2,7 +2,7 @@
   <div class="row w-100">
     <div class="col-xl-3 col-lg-4">
       <div class="card">
-        <img class="card-img-top" src="/assets/images/img-4.png">
+        <img class="card-img-top" src="/assets/images/default.png">
         <div class="card-body text-center">
           <h5 class=" card-title m-0">{{username}}</h5>
 
