--- a/Petini_Capston_Mini/src/app/shop-owner/manage-service/manage-service.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-service/manage-service.component.html
@@ -18,10 +18,10 @@
             <tr class="fw-5">
               <th class="w-2">ID</th>
               <th >Tên</th>
-              <th class="w-1">Giá</th>
-              <th class="w-1">Thời gian</th>
-              <th class="w-1">Trạng thái</th>
-              <th class="w-1">Xem và Sửa</th>
+              <th class="">Giá</th>
+              <th class="">Thời gian</th>
+              <th class="">Trạng thái</th>
+              <th class="">Xem và Sửa</th>
             </tr>
           </thead>
           <tbody>
@@ -115,7 +115,7 @@
           </tbody>
         </table>
         <!-- pagination -->
-        <div class="row w-100">
+        <div class="row 00">
           <div class="col-sm-6">
 
           </div>
